# website

./: .gitignore  .gitmodules  CNAME  _config.yml  atom.xml  deploy.sh  error.html  index.html  joelburget.github.com.cabal  keybase.txt  main.hs  parsecode.hs  posts.html  rss.xml  scaling_model.py  scaling_model_test.py
_layouts/: base.html  journal.html
_plugins/: generate_journal.rb
_posts/: 2011-2-26-about.html  2011-2-26-cologne.html  2011-2-26-data-newtype-instance-class.html  2011-2-26-do-not-delete.html  2011-2-26-posts.html  2011-2-26-slimlock.html  2012-1-3-khan-summer.html  2012-1-3-video-progress-indicators.html  2012-1-6-khan-summer.html  2012-1-6-video-progress-indicators.html
_site/: atom.xml  index.html
_site/about/: index.html
_site/cologne/: index.html
expression/: run.js  streaming28234.hs  webpack.config.js
plaintext/: Main.hs  Makefile  Scrollspy.js  assoc.jsx  bundle.js  dostuff.js  onload.js  package.json
posts/: a-b-testing-job-title.html  about.html  app-engine-tricks.md  backbone-to-react.md  cologne.html  cologne.md  data-newtype-instance-class.html  do-not-delete.html  do-not-delete.md  healthy-hackathon.md  khan-summer.html  lenses.md  plaintext.md  react-haskell.html  react.html  slimlock.html  the-expression-problem-and-tables.md  video-progress-indicators.html  visual-type-theory.md
scroll/: .eslintrc  bundle.js  font  index.html  index.js  package.json  webpack.config.js
static/: application-494acacfc0c48427b74b1736a4b9c6b8.css  index.html
templates/: 404.html  base.html  postitem.html  postlistitem.html  sidebar.html
(+38 files in other folders)
