name:                joelburgetcom
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author: joelburget@gmail.com
maintainer: joelburget@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable joelburget.com
  main-is: main.hs
  build-depends:
    base == 4.8.*,
    hakyll >= 4.2,
    filepath >= 1.3,
    containers >= 0.4,
    pandoc >= 1.11,
    split >= 0.1,
    parsec >= 3.1
